[project]
name = "scratch-llm"
version = "0.1.0"
description = "Educational implementation of an autoregressive LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentencepiece>=0.2.0",
    "torch>=2.6",
]

[project.optional-dependencies]
example = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
]
